# Vsc_Money

./: .gitignore  .last_build_id  README.md  firebase.json  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  pubspec.yaml  version.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native_vad.cpp
android/app/src/main/cpp/webrtc_vad/common_audio/signal_processing/: auto_correlation.c  complex_fft.c  copy_from_end.c  cross_correlation_neon.c  division_operations.c  filter_ar.c  filter_ar_fast_q12.c  filter_ma_fast_q12.c  levinson_durbin.c  min_max_operations.c  min_max_operations_neon.c  real_fft.c  resample_by_2_internal.c  spl_init.c  spl_inl.c  splitting_filter.c
android/app/src/main/cpp/webrtc_vad/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
android/app/src/main/cpp/webrtc_vad/common_audio/vad/: vad_core.c  vad_filterbank.c  vad_gmm.c  vad_sp.c
android/app/src/main/cpp/webrtc_vad/headers/: checks.h  utils.h
assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
assets/images/: mic_loading.json  orb.json  retry1.json  retry3.json  vitty_loader.json  vitty_loader_o.json
ios/: AudioRecorderNew.swift  FrameSize.swift  GoogleService-Info.plist  OpenMicProvider.swift  Podfile  VADStrategy.swift  YamnetFlutterPlugin.swift  YamnetVAD.swift  YamnetVADBridge.swift  YamnetVADDelegate.swift  YamnetVADStrategy.swift
ios/Runner/: AppDelegate.swift  Firebase_Custom.h  GoogleService-Info.plist  Info.plist  LaunchScreen.storyboard  LaunchScreenViewController.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/ios/: GoogleService-Info.plist
lib/: bot_response_widget.dart  chat_message_row_widget.dart  firebase_options.dart  input_field_widget.dart  main.dart  new_chat_screen.dart  testpage.dart  user_message_widget.dart  vad_service.dart  webrtc_vad.dart
lib/constants/: add_short_cut_card.dart  app_bar.dart  app_text.dart  bottomsheet.dart  chat_typing_indicator.dart  colors.dart  constants.dart  dimens.dart  hero_logo.dart  keys.dart  mesh_background.dart  secrets.dart  stock_detail_bottomsheet.dart  (+4 more)
linux/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+157 files in other folders)
